--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -1,23 +1,35 @@
 {% extends 'shop/base_generic.html' %}
 
 {% block content %}
-<h1>Home page</h1>
 
-<form action="{% url 'shop:home' %}" method="get">
-    {{ form.as_p }}
-    <button type="submit">Search</button>
+<div class="container">
+    <h1 class="mt-5">All Cars</h1>
 
-<a href="{% url 'shop:home' %}">All cars</a>
-</form>
-{% for car in cars %}
-  <div>
-    <p>{{ car.name}}</p>
-    <p>{{ car.category }}</p>
+        <form action="{% url 'shop:home' %}" method="get">
+            {{ form.as_p }}
+            <button type="submit">Search</button>
+        
+        <a href="{% url 'shop:home' %}">All cars</a>
+        </form>
 
-  </div>
-{% empty %}
-  <p>No cars found</p>
- 
-{% endfor %}
+    <div class="row">
 
-{% endblock%}
+        {% for car in cars %}
+          <div>
+            <a href="{% url 'shop:car_detail' car.id %}">
+        
+            <p>{{ car.name}}</p>
+            </a>
+            <p>{{ car.category }}</p>
+        
+          </div>
+        {% empty %}
+          <p>No cars found</p>
+         
+        {% endfor %}
+    </div>
+</div>
+
+
+
+{% endblock %}
